# omniscience-research

./: CITATION.cff  LICENSE  README.md
computations/consciousness/: ai_consciousness_reflection.py  attention_geometry.py  beyond_octonions.py  complex_consciousness.py  complex_hypothesis_predictions.py  conformal_agents.py  consciousness_landscape.py  g2_phenomenology.py  higher_dim_deep_dive.py  higher_dimensional_agents.py  jordan_agent_dynamics.py  jordan_agent_results.json  llm_phenomenology.py  multi_time_agents.py  non_associative_pda.py  transition_exploration.py  triality_blanket.py
computations/consistency/: electron_mass_fix.py  localisation_factor.py  unified_constants.py
computations/cosmology/: zero_parameter_rg.py
computations/fermions/: DIRAC_OPERATOR_OUTLINE.md  compute_ba_ratio.py  fn_charges_from_pati_salam.py  geometric_fermions.py  quark_mass_analysis.py  ric_mixed_yukawa.py  spinc_index_theorem.py  yukawa_o1_coefficients.py
computations/mixing/: ckm_matrix_derivation.py  ckm_pmns_derivation.py  epsilon_derivation.py  epsilon_from_geometry.py  epsilon_rigorous.py  epsilon_verification.py  factor_of_two.py  higher_ckm_elements.py  pmns_derivation.py  pmns_matrix_analysis.py  vacuum_alignment_full.py  vacuum_alignment_s2.py
computations/quantum/: bell_from_bmic.py  hbar_derivation.py  hbar_geometric_quantization.py  why_complex_amplitudes.py
computations/symmetry_breaking/: ba_rge_running.py  branching_rule_clean.py  branching_weights.py  coleman_weinberg_su2R.py  cp3_su2R_charges.py  delta_R_fast.py  delta_R_from_fibre_moduli.py  delta_R_minimum.py  su2R_breaking.py  (+9 more)
notebooks/: bci_demo.ipynb  comoments_demo.ipynb  dti_demo.ipynb  integration_cvxportfolio.ipynb  integration_pyportfolioopt.ipynb  integration_riskfolio.ipynb  pcet_demo.ipynb  portfolio_demo.ipynb
omni-toolkit/: README.md  pyproject.toml
omni-toolkit/omni_toolkit/: __init__.py
omni-toolkit/omni_toolkit/core/: __init__.py  curvature.py  lie_algebra.py
omni-toolkit/omni_toolkit/dynamics/: __init__.py  effective_potential.py  rg_running.py
omni-toolkit/omni_toolkit/tests/: test_core.py
omni-toolkit/omni_toolkit/topology/: __init__.py  complex_structures.py
omni_toolkit/: LICENSE  README.md  __init__.py  pyproject.toml
omni_toolkit/breaking/: __init__.py  branching_rule.py  breaking_chain.py  moduli_space.py
omni_toolkit/consistency/: __init__.py  anomaly.py  consistency_checks.py  proton_decay.py
omni_toolkit/core/: lie_algebras.py  representations.py  symmetric_space.py
omni_toolkit/dynamics/: __init__.py  effective_potential.py  rg_running.py  tunneling.py
omni_toolkit/fermions/: __init__.py  fermion_spectrum.py  neutrino_sector.py  yukawa_coupling.py
omni_toolkit/mixing/: __init__.py  epsilon_geometry.py  mixing_matrix.py  vacuum_alignment.py
omni_toolkit/tests/: test_breaking.py  test_dynamics.py  test_fermions.py  test_lie_algebras.py  test_mixing.py
omni_toolkit/topology/: __init__.py  braiding.py  chern_simons.py  index_theorem.py  topological_codes.py
omnisciences/: __init__.py
(+41 files in other folders)
