[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omni-toolkit"
version = "0.1.0"
description = "Non-perturbative geometric toolkit for symmetric space physics"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Sloan Austermann", email = "sloan@omnisciences.org" }
]
keywords = [
    "symmetric-spaces", "dewitt-metric", "ricci-tensor",
    "gauge-theory", "riemannian-geometry", "physics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/sausterm/omniscience-research"
Documentation = "https://github.com/sausterm/omniscience-research/tree/main/omni-toolkit"
Repository = "https://github.com/sausterm/omniscience-research"

[tool.hatch.build.targets.wheel]
packages = ["omni_toolkit"]

[tool.pytest.ini_options]
testpaths = ["omni_toolkit/tests"]
